--- a/config/Makefile.in.mac
+++ b/config/Makefile.in.mac
@@ -8,7 +8,7 @@ CFLAGS+=$(OPTFLAGS)
 CXXFLAGS+=$(OPTFLAGS)
 
 # Python
-PYTHON=python
+PYTHON=python3
 
 # Lua front-end
 LUA_CFLAGS=`pkg-config lua --cflags`
